[Akka Fundamental - Assignment] - SD3801 - Nguyen Duc Hoang